[package]
name = "riport"
version = "0.1.0"
authors = ["Oliver Bøving <oliverboving@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4"
rocket_contrib = "0.4"
rocket_cors = "0.5.0-beta-2"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
sha2 = "0.8"
base64 = "0.10"
tempdir = "0.3"
pandoc_types = "0.2"