[package]
name = "riport-2"
version = "0.1.0"
authors = ["Oliver Bøving <oliverboving@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.8"
actix-web = "1.0"
actix-web-actors = "1.0"
actix-files = "0.1"

futures = "0.1"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
listenfd = "0.3"

pandoc_types = "0.2"